--- a/RazorDB/appsettings.json
+++ b/RazorDB/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\SQLEXPRESS;Database=TareaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=TYTYS_LAPTOP;Database=TareaDB;Trusted_Connection=True;MultipleActiveResultSets=true; Encrypt=False; TrustServerCertificate=True"
   }
 }
